demo: fix dark mode button text invisible (button class). reduce margins so that dark mode button fits in second row on medium and large screens.

--- a/_sass/_cayman.scss
+++ b/_sass/_cayman.scss
@@ -119,7 +119,7 @@ $header-hover-color: rgba(255, 255, 255, 0.8);
 
 .btn {
   display: inline-block;
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem;
   background-color: rgba(255, 255, 255, 0.08);
   border-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
@@ -139,11 +139,11 @@ $header-hover-color: rgba(255, 255, 255, 0.8);
   }
 
   @include large {
-    padding: 0.75rem 1rem;
+    padding: 0.75rem 0.75rem;
   }
 
   @include medium {
-    padding: 0.6rem 0.9rem;
+    padding: 0.6rem 0.75rem;
     font-size: 0.9rem;
   }
 
